--- a/css/cadastro.scss
+++ b/css/cadastro.scss
@@ -25,7 +25,7 @@ input,
 select {
     opacity: 0%;
     animation: aparecer 2s ease forwards !important;
-    animation-delay: 1s !important;
+    animation-delay: 1s !important;;
 }
 /* Tentando resolver selection*/
 main  form #inputState {
@@ -148,7 +148,6 @@ main  form #inputState {
 
 .FromCadastro1 {
   width: 450px;
-  height: 50px;
 
   animation: open_square_2 2s ease forwards;
   display: none;
