--- a/css/style.scss
+++ b/css/style.scss
@@ -4,7 +4,7 @@
 
 /*Gerais*/
 html {
-  scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 
 /*header---------------------------------------------------------------------------------------------------------*/
@@ -12,133 +12,137 @@ html {
 /*main-----------------------------------------------------------------------------------------------------------*/
 /*animação principal*/
 section div h1 {
-  padding: 0px 4px;
-  font-size: 4.5rem;
-  line-height: 6rem;
-  color: transparent;
-  animation: written_tex .5s ease forwards;
+	padding: 0px 4px;
+	font-size: 4.5rem;
+	line-height: 6rem;
+	color: transparent;
+	animation: written_tex .5s ease forwards;
 }
 
 section div h1:nth-child(1) {
-  animation-delay: 1s;
+	animation-delay: 1s;
 }
 
 /*animação do quadro do texto*/
 section .DivText {
-  width: 0px;
-  height: 0px;
-  animation: open_square .5s ease forwards;
-  animation-duration: 1s;
+	width: 0px;
+	height: 0px;
+	animation: open_square .5s ease forwards;
+	animation-duration: 1s;
 }
 
 /*animação do texto dp quadro do texto*/
 #texto {
-  color: transparent;
-  font-family: "Courier";
-  font-size: 20px;
-  margin: 10px 0 0 10px;
-  white-space: nowrap;
-  overflow: hidden;
-  width: 30em;
-  animation: type 4s steps(60, end) forwards;
-  animation-delay: 2s;
+	color: transparent;
+	font-family: "Courier";
+	font-size: 20px;
+	margin: 10px 0 0 10px;
+	white-space: nowrap;
+	overflow: hidden;
+	width: 30em;
+	animation: type 4s steps(60, end) forwards;
+	animation-delay: 2s;
 }
 
 span {
-  animation: blink 1s infinite;
+	animation: blink 1s infinite;
 }
 
 
 /*footer---------------------------------------------------------------------------------------------------------*/
 
 /*loading--------------------------------------------------------------------------------------------------------*/
-*{
-  padding:0;margin:0;border:0;
-  
-  }
- 
-  .boxad{
-  position: absolute;
-  width:100%;height:100%;
-  
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  
-  
-  }
-  #pen1 {
-      animation: pen1 2s infinite ease;
-    }
-    
-    #pen2 {
-      animation: pen2 2s infinite ease;
-    }
-    
-    #pen3 {
-      animation: pen3 2s infinite ease;
-    }
-    
-    #loader {
-      animation: loaderColor 5s infinite ease;
-    }
-    
-    @keyframes pen1 {
-      0% {
-        transform: translateY(0px);
-      }
-    
-      15% {
-        transform: translateY(-10px);
-      }
-    
-      30% {
-        transform: translateY(0px);
-      }
-    }
-    
-    @keyframes pen2 {
-      30% {
-        transform: translateY(0px);
-      }
-    
-      45% {
-        transform: translateY(-10px);
-      }
-    
-      60% {
-        transform: translateY(0px);
-      }
-    }
-    
-    @keyframes pen3 {
-      60% {
-        transform: translateY(0px);
-      }
-    
-      75% {
-        transform: translateY(-10px);
-      }
-    
-      90% {
-        transform: translateY(0px);
-      }
-    }
-    
-    @keyframes loaderColor {
-      0% {
-        fill: #513B56;
-      }
-    
-      33% {
-        fill: #348AA7;
-      }
-    
-      66% {
-        fill: #5DD39E;
-      }
-    
-      100% {
-        fill: #513B56;
-      }
-    }
+* {
+	padding: 0;
+	margin: 0;
+	border: 0;
+
+}
+
+.boxad {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+
+}
+
+#pen1 {
+	animation: pen1 2s infinite ease;
+}
+
+#pen2 {
+	animation: pen2 2s infinite ease;
+}
+
+#pen3 {
+	animation: pen3 2s infinite ease;
+}
+
+#loader {
+	animation: loaderColor 5s infinite ease;
+}
+
+@keyframes pen1 {
+	0% {
+		transform: translateY(0px);
+	}
+
+	15% {
+		transform: translateY(-10px);
+	}
+
+	30% {
+		transform: translateY(0px);
+	}
+}
+
+@keyframes pen2 {
+	30% {
+		transform: translateY(0px);
+	}
+
+	45% {
+		transform: translateY(-10px);
+	}
+
+	60% {
+		transform: translateY(0px);
+	}
+}
+
+@keyframes pen3 {
+	60% {
+		transform: translateY(0px);
+	}
+
+	75% {
+		transform: translateY(-10px);
+	}
+
+	90% {
+		transform: translateY(0px);
+	}
+}
+
+@keyframes loaderColor {
+	0% {
+		fill: #513B56;
+	}
+
+	33% {
+		fill: #348AA7;
+	}
+
+	66% {
+		fill: #5DD39E;
+	}
+
+	100% {
+		fill: #513B56;
+	}
+}
