--- a/css/home.scss
+++ b/css/home.scss
@@ -18,115 +18,8 @@ h3 {
     height: 200px;
 }
 
-.slider {
-    margin: 0 auto;
-    width: 1200px;
-    height: 500px;
-    overflow: hidden;
-}
-
-.slides {
-    width: 400%;
-    height: 400px;
-    display: flex;
-}
-
-.slides input {
-    display: none;
-}
-
-.slide {
-    width: 25%;
-    position: relative;
-    transition: 2s;
-
-}
-
-.slide img {
-    width: 1200px;
-}
-
-.manual-navigation {
-    position: absolute;
-    left: 50%;
-    right: 50%;
-    transform: translate(-50%, -50%);
-    width: 800px;
-    margin-top: -1px;
-    display: flex;
-    justify-content: center;
-}
-
-.manual-btn {
-    border: 2px solid white;
-    padding: 5px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 1s;
-}
-
-.manual-btn:not(:last-child) {
-    margin-right: 40px;
-}
-
-.manual-btn:hover {
-    background-color: white;
-}
-
-#radio1:checked~.first {
-    margin-left: 0;
-}
-
-#radio2:checked~.first {
-    margin-left: -25%;
-}
-
-#radio3:checked~.first {
-    margin-left: -50%;
-}
-
-#radio4:checked~.first {
-    margin-left: -75%;
-}
-
-.navigation-auto div {
-    border: 2px solid #20a6ff;
-    padding: 5px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 1s;
-}
-
-.navigation-auto {
-    position: absolute;
-    left: 50%;
-    right: 50%;
-    transform: translate(-50%, -50%);
-    width: 800px;
-    margin-top: 360px;
-    display: flex;
-    justify-content: center;
-    margin-top: 400px;
-}
-
-.navigation-auto div:not(:last-child) {
-    margin-right: 40px;
-}
-
-#radio1:checked~.navigation-auto .auto-btn1 {
-    background-color: white;
-}
-
-#radio2:checked~.navigation-auto .auto-btn1 {
-    background-color: white;
-}
-
-#radio3:checked~.navigation-auto .auto-btn1 {
-    background-color: white;
-}
-
-#radio4:checked~.navigation-auto .auto-btn1 {
-    background-color: white;
+.carrossel{
+    height: 600px;
 }
 
 p {
@@ -155,7 +48,7 @@ p {
     margin-bottom: 50px;
 }
 
-#h3 {
+#titulo-de-boas-vindas {
     padding: 0px;
 }
 
@@ -164,11 +57,13 @@ p {
     height: 350px;
 }
 
-.slides1 {
+.container-imagem {
     padding: 30px;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center;    
+    min-width: 300px;
+    max-width: 1000px;
 }
 
 .texto {
@@ -178,8 +73,9 @@ p {
     width: 500px;
     height: 430px;
     border-radius: 30px;
-    padding: 10px;
     font-size: 14pt;
+    padding-left: 30px;
+    text-align: justify;
 }
 
 p {
