--- a/css/home.scss
+++ b/css/home.scss
@@ -2,138 +2,25 @@ body {
     font: normal;
 }
 
-header {
-    margin-bottom: 50px;
-}
-
-h2 {
-    text-align: center;
-}
-
-h3 {
-    text-align: center;
-}
-
-.navbar1 {
-    height: 200px;
-}
-
-.carrossel{
-    height: 600px;
-}
-
-p {
-    padding: 50px;
-}
-
-.boas-vidas {
-    padding: 30px;
-}
-
-.container-projeto {
-    display: flex;
-    justify-content: space-between;
-}
-
-.sobre-o-projeto {
+.imagem-slider {
     width: 800px;
-    height: 200px;
-    background-color: rgb(38, 153, 219);
-    color: white;
-    border-radius: 20px;
-    padding: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    font-size: 16pt;
-    margin-bottom: 50px;
+    height: 500px;
 }
 
-#titulo-de-boas-vindas {
-    padding: 0px;
-}
-
-#img2 {
-    width: 580px;
+.imagens{
+    width: 500px;
     height: 350px;
 }
 
-.container-imagem {
-    padding: 30px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;    
-    min-width: 300px;
-    max-width: 1000px;
-}
-
-.texto {
-    position: relative;
-    top: 30px;
-    right: 100px;
+.imagem01{
     width: 500px;
-    height: 430px;
-    border-radius: 30px;
-    font-size: 14pt;
-    padding-left: 30px;
-    text-align: justify;
+    height: 350px;
 }
 
-p {
-    margin: 5px;
-    padding: 0px;
-}
-
-.slides2 {
-    padding: 30px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.texto2 {
-    position: relative;
-    top: 30px;
-    left: 6px;
-    width: 500px;
-    height: 430px;
-    border-radius: 30px;
-    padding: 10px;
-    font-size: 14pt;
+.container01{
+    padding: 20px
 }
 
 footer {
-    display: flex;
-    justify-content: space-evenly;
-    height: 300px;
-    align-items: center;
-}
-
-.menu-rodapé {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    position: relative;
-    right: 10%;
-}
-
-.menu-rodapé,
-li {
-    color: white;
-    list-style: none;
-}
-
-#h2 {
-    color: white;
-    padding: 30px;
-}
-
-.a {
-    position: relative;
-    right: 10px;
-    bottom: 10px;
-}
-
-a {
-    color: white;
-    text-decoration: none;
+    height: 100%;
 }
