--- a/css/home.scss
+++ b/css/home.scss
@@ -2,24 +2,93 @@ footer {
   height: 100%;
 }
 
-#container {
-  width: 1100px;
-  height: 500px;
-}
-#seu-cadastro {
-  width: 300px;
-  height: 450px;
+#container-perfil img {
+  border-radius: 190px;
+  width: 200px;
+  height: 210px;
 }
 
-#materias {
-  width: 300px;
-  height: 450px;
+.nav-btn {
+  border: none;
+  border-radius: 20px;
+  width: 120px;
+  height: 50px;
 }
-#cursos {
-  width: 300px;
-  height: 450px;
+
+.text-white label {
+  display: block;
+  position: relative;
+  left: 35px;
 }
-#inscriçoes {
-  width: 300px;
-  height: 450px;
+
+.curso label {
+  display: block;
+  position: relative;
+  left: 50px;
+}
+
+.livro label {
+  display: block;
+  position: relative;
+  left: 55px;
+}
+
+.temas label {
+  display: block;
+  position: relative;
+  left: 45px;
+}
+
+.nav-container {
+  border-radius: 20px;
+}
+
+.nav-container button, label {
+  width: 90px;
+  height: 70px;
+  display: block;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+}
+
+.nav-container label{
+  position: relative;
+  right: 15px;
+}
+
+button{
+  border: none;
+  border-radius: 15px;
+  background: none;
+  color: white;
+  margin: 10px;
+}
+
+.nav-btn-sair {
+  border: none;
+  border-radius: 20px;
+  width: 200px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 50px;
+  background-color: red;
+}
+
+#btnsair:hover {
+  background-color: rgb(234, 124, 124);
+}
+
+.modal {
+  background-color: rgba(0, 0, 0, 0.333);
+}
+
+@media screen and (max-width: 1020px) {
+  .nav-container {
+    width: 100px;
+    height: 450px;
+    display: block;
+  }
 }
