--- a/css/cadastro.scss
+++ b/css/cadastro.scss
@@ -188,16 +188,17 @@ label {
   margin-bottom: 5px;
 }
 
-input[type="text"],
-input[type="password"] {
-  width: 100%;
-  padding: 12px 20px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  transition: 0.5s;
-}
+// input[type="text"],
+// input[type="password"] {
+//   width: 100%;
+//   padding: 12px 20px;
+//   font-size: 16px;
+//   border: 1px solid #ccc;
+//   border-radius: 4px;
+//   box-sizing: border-box;
+//   transition: 0.5s;
+// }
+
 input[type="button"],
 input[type="submit"] {
   width: 100%;
@@ -214,19 +215,10 @@ input[type="button"]:hover {
   background-color: #ccc;
   color: black;
 }
+
 input[type="submit"]:hover {
   background-color: #ccc;
   color: black;
-}
-
-select {
-  width: 100%;
-  padding: 12px 20px;
-  font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  transition: 0.5s;
 }
 
 .etapa02 {
