--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,8 @@ body {
 
 .carousel-item {
   width: 100%;
-  height: 950px;
+  height: auto;
+  max-height: 900px;
   margin: 0 !important;
 }
 
@@ -19,4 +20,96 @@ body {
 
 footer {
   height: 100%;
-}/*# sourceMappingURL=index.css.map */
+}
+
+.container-imagens img {
+  width: 500px;
+  height: 400px;
+  margin-left: 50px;
+}
+
+.sobre-projeto {
+  margin-bottom: 50px;
+}
+
+.container-projeto {
+  display: flex;
+}
+
+.texto-projeto {
+  margin-left: 30px;
+}
+
+.texto-projeto > p {
+  font-size: 18pt;
+  text-align: justify;
+  margin-left: 50px;
+}
+
+section > h2 {
+  font-size: 30pt;
+  padding: 50px;
+}
+
+div > h2 {
+  margin-left: 50px;
+  margin-bottom: 30px;
+  font-size: 28pt;
+}
+
+.container-funcionalidades {
+  display: flex;
+}
+
+.container-img-funcionalidades img {
+  width: 500px;
+  height: 400px;
+  margin-left: 50px;
+}
+
+.texto-funcionalidades {
+  margin-left: 30px;
+}
+
+.texto-funcionalidades > p {
+  font-size: 18pt;
+  text-align: justify;
+  margin-left: 50px;
+}
+
+@media screen and (max-width: 1020px) {
+  section > h2 {
+    font-size: 18pt;
+  }
+  .container-projeto {
+    display: block;
+  }
+  .container-imagens img {
+    width: 400px;
+    height: 300px;
+    margin-top: 50px;
+    margin-left: 0px;
+  }
+  div > h2 {
+    font-size: 20pt;
+    margin-top: 30px;
+  }
+  .texto-projeto > p {
+    margin-left: 0px;
+    padding: auto;
+    margin-left: 10px;
+    margin-right: 50px;
+    width: 250px;
+  }
+  .texto-funcionalidades {
+    position: relative;
+    top: 100%;
+  }
+  .container-img-funcionalidades img {
+    width: 400px;
+    height: 300px;
+    padding: 0px;
+    position: relative;
+    left: 100px;
+  }
+}/*# sourceMappingURL=style.css.map */
