--- a/Application/public/assets/css/cadastro.css
+++ b/Application/public/assets/css/cadastro.css
@@ -1,179 +1,96 @@
-/* @charset "UTF-8";
-/*importações*/
-/*Galera esse arquivo aqui foi feito pra conter todas as animações que formos usar e criar
-pra manter o sistema organizado*/
-/* :root {
-  --color-white: #fff;
-  --color-transp: #ffffff00;
-  --color-light: #f8f9fa;
-}
-
-@-webkit-keyframes written_tex {
-  100% {
-    color: var(--color-white);
-  }
-}
-
-@keyframes written_tex {
-  100% {
-    color: var(--color-white);
-  }
-}
-@-webkit-keyframes open_square {
-  0% {
-    width: 10px;
-    height: 0;
-  }
-  50% {
-    height: 250px;
-    width: 10px;
-  }
-  100% {
-    width: 800px;
-    height: 250px;
-  }
-}
-@keyframes open_square {
-  0% {
-    width: 10px;
-    height: 0;
-  }
-  50% {
-    height: 250px;
-    width: 10px;
-  }
-  100% {
-    width: 800px;
-    height: 250px;
-  }
-}
-@-webkit-keyframes open_square_2 {
-  0% {
-    width: 0px !important;
-    height: 0;
-  }
-  100% {
-    width: 500px !important;
-    height: 450px;
-  }
-}
-@keyframes open_square_2 {
-  0% {
-    width: 0px !important;
-    height: 0;
-  }
-  100% {
-    width: 500px !important;
-    height: 450px;
-  }
-}
-@-webkit-keyframes open_square_3 {
-  0% {
-    width: 10px;
-    height: 0;
-  }
-  50% {
-    height: 350px;
-    width: 10px;
-  }
-  100% {
-    width: 400px;
-    height: 350px;
-  }
-}
-@keyframes open_square_3 {
-  0% {
-    width: 10px;
-    height: 0;
-  }
-  50% {
-    height: 350px;
-    width: 10px;
-  }
-  100% {
-    width: 400px;
-    height: 350px;
-  }
-}
-@-webkit-keyframes type {
-  from {
-    width: 0;
-  }
-  0% {
-    color: var(--color-transp);
-  }
-  20% {
-    color: orange;
-  }
-  100% {
-    color: orange;
-  }
-}
-@keyframes type {
-  from {
-    width: 0;
-  }
-  0% {
-    color: var(--color-transp);
-  }
-  20% {
-    color: orange;
-  }
-  100% {
-    color: orange;
-  }
-}
-@-webkit-keyframes blink {
-  to {
-    opacity: 0;
-  }
-}
-@keyframes blink {
-  to {
-    opacity: 0;
-  }
-}
-@-webkit-keyframes aparecer {
-  0% {
-    opacity: 0%;
-  }
-  100% {
-    opacity: 100%;
-  }
-}
-@keyframes aparecer {
-  0% {
-    opacity: 0%;
-  }
-  100% {
-    opacity: 100%;
-  }
-} */
-/*gerais*/
-
 body {
   min-height: 100vh;
-  background: radial-gradient(ellipse at bottom, #0d1d31 0%, #0c0d13 100%);
-  /* overflow: hidden; */
+  background: radial-gradient(ellipse at bottom, blue 0%, #0c0d13 100%);
+  overflow: hidden;
 }
 
-/*main-----------------------------------------------------------------------------------------------------------*/
-/* main .FromCadastro {
-  width: 450px;
-  height: 50px;
-  -webkit-animation: open_square_2 2s ease forwards;
-          animation: open_square_2 2s ease forwards;
+.login-card {
+  width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: #e8e8e8;
+  box-shadow: 2px 2px 10px #ccc;
+  max-width: 100%;
 }
 
-/* Aplica a animação aparecer aos itens dentro do formulário */
-/* .FormCadastro label,
-button,
-input,
-select {
-  opacity: 0%;
-  -webkit-animation: aparecer 2s ease forwards !important;
-          animation: aparecer 2s ease forwards !important;
-  -webkit-animation-delay: 1s !important;
-          animation-delay: 1s !important;
-} */
-/*# sourceMappingURL=cadastro.css.map */
+.card-header {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.card-header .log {
+  margin: 0;
+  font-size: 24px;
+  color: black;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+label {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+button[type=button],
+button[type=submit] {
+  width: 100%;
+  background-color: #333;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button[type=button]:hover {
+  background-color: #ccc;
+  color: black;
+}
+
+button[type=submit]:hover {
+  background-color: #ccc;
+  color: black;
+}
+
+.etapa02 {
+  display: none;
+}
+
+input {
+  margin: 5px;
+}
+
+#estados {
+  margin-top: 4px;
+  margin-right: 16px;
+  width: 100%;
+  padding: 3px 6px;
+  font-size: 16px;
+  box-sizing: border-box;
+  transition: 0.5s;
+}
+
+#escolaridade {
+  margin-top: 4px;
+  margin-left: 4px;
+  width: 189px;
+  padding: 3px 6px;
+  font-size: 16px;
+  box-sizing: border-box;
+  transition: 0.5s;
+}
+
+#estados {
+  margin-top: 4px;
+  margin-left: 4px;
+  width: 189px;
+  padding: 3px 6px;
+  font-size: 16px;
+  box-sizing: border-box;
+  transition: 0.5s;
+}/*# sourceMappingURL=cadastro.css.map */
